

EXTRA_DIST = \
alignment.rst \
attributes.rst \
concepts.rst \
eval.rst \
extract.rst \
features.rst \
grammar.rst \
hypergraph.rst \
index.rst \
lattice.rst \
learn.rst \
linguistic.rst \
mpi.rst \
non-terminals.rst \
operation.rst \
parameter.rst \
parsing.rst \
pyp.rst \
training.rst \
tree-grammar.rst
