
if WITH_RST2HTML

index.html: ../README.rst
	$(RST2HTML) --syntax-highlight=short --stylesheet=html4css1.css,highlight.css,style.css ../README.rst > index.html

endif WITH_RST2HTML

EXTRA_DIST = \
alignment.rst \
concepts.rst \
eval.rst \
extract.rst \
features.rst \
grammar.rst \
hypergraph.rst \
indexing.rst \
lattice.rst \
learning.rst \
linguistic.rst \
non-terminals.rst \
operation.rst \
parallel.rst \
option.rst \
parsing.rst \
pyp.rst \
training.rst \
training-stsg.rst \
tree-grammar.rst
