
if WITH_RST2MAN

man1_MANS = \
cicada-alignment.py.man \
cicada-extract.py.man \
cicada-index.py.man \
cicada-learn.py.man \
cicada-learn-online.py.man \
cicada-mert.py.man \
cicada.man \
cicada_mpi.man \
cicada_alignment_hmm.man \
cicada_alignment_model1.man \
cicada_alignment_model4.man \
cicada_filter_alignment.man \
cicada_filter_bitext.man \
cicada_filter_chardet.man \
cicada_filter_parseforest.man \
cicada_filter_penntreebank.man \
cicada_filter_config.man \
cicada_filter_config_moses.man \
cicada_filter_dependency.man \
cicada_learn.man \
cicada_learn_kbest.man \
cicada_learn_kbest_mpi.man \
cicada_learn_mpi.man \
cicada_oracle.man \
cicada_oracle_kbest.man \
cicada_oracle_kbest_mpi.man \
cicada_oracle_mpi.man

.rst.man: $*.rst
	$(RST2MAN) < $*.rst > $*.man

endif WITH_RST2MAN

EXTRA_DIST = \
cicada-alignment.py.rst \
cicada-extract.py.rst \
cicada-index.py.rst \
cicada-learn.py.rst \
cicada-learn-online.py.rst \
cicada-mert.py.rst \
cicada.rst \
cicada_mpi.rst \
cicada_alignment_hmm.rst \
cicada_alignment_model1.rst \
cicada_alignment_model4.rst \
cicada_filter_alignment.rst \
cicada_filter_bitext.rst \
cicada_filter_chardet.rst \
cicada_filter_parseforest.rst \
cicada_filter_penntreebank.rst \
cicada_filter_config.rst \
cicada_filter_config_moses.rst \
cicada_filter_dependency.rst \
cicada_learn.rst \
cicada_learn_kbest.rst \
cicada_learn_kbest_mpi.rst \
cicada_learn_mpi.rst \
cicada_oracle.rst \
cicada_oracle_kbest.rst \
cicada_oracle_kbest_mpi.rst \
cicada_oracle_mpi.rst

